Font-face working

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta content="text/html; charset=utf-8" http-equiv="Content-type" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Existed | Экзистенциальная игра</title>
+    <title>Экзистенциальная игра</title>
     <script src="js/jquery.js"></script>
     <script src="js/raphael.js"></script>
     <script src="js/existed.js"></script>
@@ -16,7 +16,7 @@
         <a href="#about"><center><img src="existed.jpeg" /></center></a>
       </div>
       <h1 id="about">Экзистенциальная игра</h1>
-      <p>Привет! <br /><br />Эта страница посвящена очень интересной игре, в которую я предлагаю тебе сыграть.<br /><br />Правила игры простые: ты собираешь небольшой круг близких друзей, и вы придумываете друг другу задания. После, каждый игрок отбирает себе <u><b>10 простых</b></u> и <u><b>10 сложных</b></u> заданий. Игра длится <u><b>три месяца</b></u>.<br /><br />По окончании трех месяцев каждый из игроков получает неимоверный профит в виде новых скилзов, опыта и прочих бонусов.<br /><br />Выигрывает тот, у кого больше всего выполненных заданий.<br /><br />По мере прохождения, каждый игрок должен отписываться в свой собственный <u><b>блог</b></u>. Будь то <a href="http://livejournal.com" target="blank">ЖЖ</a>, <a href="http://blogengine.ru" target="blank">Эгея</a>, <a href="https://github.com/malfermu/fizzy" target="blank">Физзи</a> и другие.<br /><br />Игра интересна сама по себе. Она позволяет уйти от быта, заставляет учиться контроллировать свое время и оценивать верно свои силы. Это хороший опыт и довольно интересно.<br /><br /><b>Удачи в игра ;-)</b>
+      <p>Привет! <br /><br />Эта страница посвящена очень интересной игре, в которую я предлагаю тебе сыграть.<br /><br />Правила игры простые: ты собираешь небольшой круг близких друзей, и вы придумываете друг другу задания. После, каждый игрок отбирает себе <u><b>10 простых</b></u> и <u><b>10 сложных</b></u> заданий. Игра длится <u><b>три месяца</b></u>.<br /><br />По окончании трех месяцев каждый из игроков получает неимоверный профит в виде новых скилзов, опыта и прочих бонусов.<br /><br />Выигрывает тот, у кого больше всего выполненных заданий.<br /><br />По мере прохождения, каждый игрок должен отписываться в свой собственный <u><b>блог</b></u>. Будь то <a href="http://livejournal.com" target="blank">ЖЖ</a>, <a href="http://blogengine.ru" target="blank">Эгея</a>, <a href="https://github.com/malfermu/fizzy" target="blank">Физзи</a> и другие.<br /><br />Игра интересна сама по себе. Она позволяет уйти от быта, заставляет учиться контроллировать свое время и оценивать верно свои силы. Это хороший опыт и довольно интересно.<br /><br /><b>Удачи в игре ;-)</b>
       </p>
     </div>
     <div id="canvas_container"></div>
